Updated model name

--- a/sagemaker-interest-rate-model-model-package.ipynb
+++ b/sagemaker-interest-rate-model-model-package.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "role = get_execution_role()\n",
     "sess = sage.Session()\n",
-    "model_package_arn='<REPLACE WITH MODEL ARN e.g. arn:aws:sagemaker:[region]:[aws account]:model-package/interest-rate-mobiuss-XXX>'\n",
+    "model_package_arn='<REPLACE WITH MODEL ARN e.g. arn:aws:sagemaker:[region]:[aws account]:model-package/interest-rate-model-XXX>'\n",
     "s3_base_path='s3://<REPLACE WITH BUCKET NAME>'\n"
    ]
   },
@@ -40,7 +40,7 @@
    "outputs": [],
    "source": [
     "from sagemaker import ModelPackage\n",
-    "model_name='interest-rate-mobiuss'\n",
+    "model_name='interest-rate-model'\n",
     "model = ModelPackage(name=model_name,\n",
     "                     role=role,\n",
     "                     model_package_arn=model_package_arn,\n",
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "endpoint_name = 'interest-rate-mobiuss'"
+    "endpoint_name = 'interest-rate-model'"
    ]
   },
   {
